--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
         web:
-                image: atlas_port_v1 # Change the image name to something unique to your project, aka my_unique_name_v1
+                image: flask_port_v1 # Change the image name to something unique to your project, aka my_unique_name_v1
                 build: .
                 ports:
-                        - "8731:8731" # Edit the number on the left to match the port you selected
+                        - "8738:8080" # Edit the number on the left to match the port you selected
                 volumes:
                         - ./volumes:/volumes
                         - ./instance:/instance
